...
            sendAnalyticsEvent(page: "newsletter_page")
        }
        .refreshable {
            newsletterPageViewModel.update()
            featureManager.update()
        }
        .accessibility(identifier: "NewsletterView")
    }
    
    func getFilterList(groupedElements: [Int: [NewsletterEntity]]) -> [Int] {
        // Get the list of years
        var filterList = groupedElements.keys.map { $0 }
        let currentYear = Calendar.current.component(.year, from: Date())
...
