...
        }
        .refreshable {
            homePageViewModel.update()
            featureManager.update()
            userInfosViewModel.update()
        }
        .accessibility(identifier: "HomeView")
    }

    private func lastNewsletterSectionIsEnabled() -> Bool {
        // Check that the newsletters are a feature enabled
        return featureManager.isEnabled(item: .newsletters)
    }
...
